--- a/Python/modulo-1-ejercicio-9-funciones-argumentos.ipynb
+++ b/Python/modulo-1-ejercicio-9-funciones-argumentos.ipynb
@@ -43,6 +43,151 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#2\n",
+    "# Te despides de tu mejor amigo, \"Nos vemos el próximo año\". \n",
+    "# Vuestro trabajo: Dado un año, encuentra el próximo cumpleaños o el año más cercano en el que verás a tu mejor amigo.\n",
+    "Condiciones\n",
+    "Año siempre positivo.\n",
+    "El siguiente año que le felicites a tu mejor amigo no puede tener ningún dígito repetido."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Probad la función con los siguientes casos:\n",
+    "\n",
+    "7712 ==> El siguiente año que felicitarás a tu amigo será el 7801. \n",
+    "Por que es el siguiente año en el que no hay ninguún dígito repetido. \n",
+    "\n",
+    "\n",
+    "1001 => 1023 \n",
+    "\n",
+    "1123 => 1203\n",
+    "\n",
+    "2001 => 2013"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#3 \n",
+    "# Tenéis que crear un función que chequee la vida de un evaporador que contiene un gas.\n",
+    "Conocemos el contenido del evaporador (contenido en ml), el porcentaje de gas que se pierde cada día y el umbral en porcentaje a partir del cual el evaporador deja de ser útil. Todos los números serán estrictamente positivos.\n",
+    "⚠️ Nota: el contenido no es, de hecho, necesario en el cuerpo de la función, podéis utilizarlo o no."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Probad con los siguientes casos: \n",
+    "\n",
+    "10, 10, 5 => 29\n",
+    "\n",
+    "10, 10, 10 = > 22"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#4 Definid una función que tome como argumento un entero y devuelva True o False dependiendo de si el número es primo o no.\n",
+    "Según la Wikipedia, un número primo es un número natural mayor que 1 que no tiene divisores positivos más que 1 y él mismo.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Probad la función con los siguientes números: \n",
+    "\n",
+    "0 => False\n",
+    "2 => True\n",
+    "73 => True\n",
+    "-1 => False\n",
+    "5099 => True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#5\n",
+    "# Probablemente conozcais el sistema de \"me gusta\" de Facebook y otras páginas. La gente puede dar \"me gusta\" a las publicaciones del blog, a las imágenes o a otros elementos. Queremos crear el texto que debe mostrarse junto a dicho elemento.\n",
+    "Cread una función que toma una lista que contiene los nombres de las personas a las que les gusta un artículo. Debe devolver el texto que se muestra en los ejemplos:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Probad los siguientes ejemplos: \n",
+    "\n",
+    "[]                              -->  \"A nadie le gusta esto\"\n",
+    "[\"Paola\"]                       -->  \"A Peter le gusta esto\"\n",
+    "[\"Jacoba\", \"Alex\"]               -->  \"A Jacob y Alex les gusta esto\"\n",
+    "[\"Maria\", \"Juana\", \"Lola\"]         -->  \"A Max, John y Mark les gusta esto\"\n",
+    "[\"Alex\", \"Jacoba\", \"Lola\", \"Carmen\"]-->  \"A Alex, Jacob y 2 más les gusta esto\"\n",
+    "[\"Alex\", \"Jacoba\", \"Lola\", \"Carmen\", \"Mariana\"]-->  \"A Alex, Jacoba y 3 más les gusta esto\""
+   ]
   }
  ],
  "metadata": {
