--- a/Python/modulo-1-ejercicio-9-funciones-argumentos.ipynb
+++ b/Python/modulo-1-ejercicio-9-funciones-argumentos.ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Probad la función con los siguientes casos: \n",
+    "#Probad la función con los siguientes casos: \n",
     "\n",
     "\"..... + ...............\" => \"....................\"\n",
     "\"..... - ...\" => \"..\"\n",
@@ -53,9 +53,9 @@
     "#2\n",
     "# Te despides de tu mejor amigo, \"Nos vemos el próximo año\". \n",
     "# Vuestro trabajo: Dado un año, encuentra el próximo cumpleaños o el año más cercano en el que verás a tu mejor amigo.\n",
-    "Condiciones\n",
-    "Año siempre positivo.\n",
-    "El siguiente año que le felicites a tu mejor amigo no puede tener ningún dígito repetido."
+    "#Condiciones\n",
+    "#Año siempre positivo.\n",
+    "#El siguiente año que le felicites a tu mejor amigo no puede tener ningún dígito repetido."
    ]
   },
   {
@@ -64,7 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Probad la función con los siguientes casos:\n",
+    "#Probad la función con los siguientes casos:\n",
     "\n",
     "7712 ==> El siguiente año que felicitarás a tu amigo será el 7801. \n",
     "Por que es el siguiente año en el que no hay ninguún dígito repetido. \n",
@@ -79,17 +79,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "def felicitar(año):\n",
+    "        if año> años:\n",
+    "            print(año)\n",
+    "            año +=1\n",
+    "            set.año(4)\n",
+    "            \n",
+    "            \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(felicitar(1))"
+   ]
   },
   {
    "cell_type": "code",
@@ -99,8 +126,10 @@
    "source": [
     "#3 \n",
     "# Tenéis que crear un función que chequee la vida de un evaporador que contiene un gas.\n",
-    "Conocemos el contenido del evaporador (contenido en ml), el porcentaje de gas que se pierde cada día y el umbral en porcentaje a partir del cual el evaporador deja de ser útil. Todos los números serán estrictamente positivos.\n",
-    "⚠️ Nota: el contenido no es, de hecho, necesario en el cuerpo de la función, podéis utilizarlo o no."
+    "#Conocemos el contenido del evaporador (contenido en ml), el porcentaje de gas que se pierde \n",
+    "# cada día y el umbral en porcentaje a partir del cual el evaporador deja de ser útil. \n",
+    "# Todos los números serán estrictamente positivos.\n",
+    "#⚠️ Nota: el contenido no es, de hecho, necesario en el cuerpo de la función, podéis utilizarlo o no."
    ]
   },
   {
@@ -109,7 +138,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Probad con los siguientes casos: \n",
+    "#Probad con los siguientes casos: \n",
     "\n",
     "10, 10, 5 => 29\n",
     "\n",
@@ -129,8 +158,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#4 Definid una función que tome como argumento un entero y devuelva True o False dependiendo de si el número es primo o no.\n",
-    "Según la Wikipedia, un número primo es un número natural mayor que 1 que no tiene divisores positivos más que 1 y él mismo.\n"
+    "#4 Definid una función que tome como argumento un entero y devuelva True o False \n",
+    "# dependiendo de si el número es primo o no.\n",
+    "#Según la Wikipedia, un número primo es un número natural mayor que 1 que no tiene \n",
+    "#divisores positivos más que 1 y él mismo.\n"
    ]
   },
   {
@@ -139,7 +170,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Probad la función con los siguientes números: \n",
+    "#Probad la función con los siguientes números: \n",
     "\n",
     "0 => False\n",
     "2 => True\n",
@@ -169,8 +200,11 @@
    "outputs": [],
    "source": [
     "#5\n",
-    "# Probablemente conozcais el sistema de \"me gusta\" de Facebook y otras páginas. La gente puede dar \"me gusta\" a las publicaciones del blog, a las imágenes o a otros elementos. Queremos crear el texto que debe mostrarse junto a dicho elemento.\n",
-    "Cread una función que toma una lista que contiene los nombres de las personas a las que les gusta un artículo. Debe devolver el texto que se muestra en los ejemplos:\n"
+    "# Probablemente conozcais el sistema de \"me gusta\" de Facebook y otras páginas.\n",
+    "# La gente puede dar \"me gusta\" a las publicaciones del blog, a las imágenes o a otros elementos. \n",
+    "# Queremos crear el texto que debe mostrarse junto a dicho elemento.\n",
+    "#Cread una función que toma una lista que contiene los nombres de las personas a las que les gusta un artículo.\n",
+    "# Debe devolver el texto que se muestra en los ejemplos:\n"
    ]
   },
   {
@@ -179,7 +213,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Probad los siguientes ejemplos: \n",
+    "#Probad los siguientes ejemplos: \n",
     "\n",
     "[]                              -->  \"A nadie le gusta esto\"\n",
     "[\"Paola\"]                       -->  \"A Peter le gusta esto\"\n",
@@ -187,6 +221,41 @@
     "[\"Maria\", \"Juana\", \"Lola\"]         -->  \"A Max, John y Mark les gusta esto\"\n",
     "[\"Alex\", \"Jacoba\", \"Lola\", \"Carmen\"]-->  \"A Alex, Jacob y 2 más les gusta esto\"\n",
     "[\"Alex\", \"Jacoba\", \"Lola\", \"Carmen\", \"Mariana\"]-->  \"A Alex, Jacoba y 3 más les gusta esto\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def likes(nombre):\n",
+    "    frase= f\"A {nombre} le gusta esto\"\n",
+    "    return frase\n",
+    "\n",
+    "\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'A Paola le gusta esto'"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "likes(\"Paola\")"
    ]
   }
  ],
@@ -197,7 +266,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.8.9"
   },
   "orig_nbformat": 4,
