--- a/Python/modulo-1-ejercicio-9-funciones-argumentos.ipynb
+++ b/Python/modulo-1-ejercicio-9-funciones-argumentos.ipynb
@@ -225,13 +225,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def likes(nombre):\n",
-    "    frase= f\"A {nombre} le gusta esto\"\n",
-    "    return frase\n",
+    "def likes(lista_nombres):\n",
+    "    if len(lista_nombres)==0:\n",
+    "        response=\"A nadie le gusta esto\"\n",
+    "    elif len(lista_nombres)== 1:\n",
+    "        response= f\"A {lista_nombres[0]} le gusta esto\"\n",
+    "    elif len(lista_nombres)==2:\n",
+    "        response= f\"A {lista_nombres[0]} y {lista_nombres[1]} les gusta esto\"\n",
+    "    elif len(lista_nombres)== 3:\n",
+    "        response= f\"A {lista_nombres[0]}, {lista_nombres[1]} y {lista_nombres[2]} les gusta esto\"\n",
+    "    elif len(lista_nombres)>3:\n",
+    "        response= f\"A {lista_nombres[0]}, {lista_nombres[1]} y \"+str(len(lista_nombres)-2) + \" más les gusta esto\"  \n",
+    "    return response\n",
+    "\n",
+    "\n",
+    "\n",
+    "    \n",
+    "\n",
     "\n",
     "\n",
     "\n",
@@ -240,22 +254,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'A Paola le gusta esto'"
+       "'A Alex, Jacoba y 3 más les gusta esto'"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "likes(\"Paola\")"
+    "likes([\"Alex\", \"Jacoba\", \"Lola\", \"Carmen\", \"Mariana\"])"
    ]
   }
  ],
