--- a/Python/modulo-1-ejercicio-9-funciones-argumentos.ipynb
+++ b/Python/modulo-1-ejercicio-9-funciones-argumentos.ipynb
@@ -79,43 +79,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "\n",
-    "def felicitar(año):\n",
-    "        if año> años:\n",
-    "            print(año)\n",
-    "            año +=1\n",
-    "            set.año(4)\n",
-    "            \n",
-    "            \n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "        \n",
+    "def felicitar(año): \n",
+    "    año_str=str(año) #añadimos una variable para poder usar el año como string \n",
+    "    while len(set(año_str))!= 4: #ya que es string podemos usar funciones de string como set y len\n",
+    "        año= año+1                  #pero necesitamos que sea int para poder sumar 1 \n",
+    "        año_str=str(año)            #convertimos a string otra vez para que empiece de nuevo la búsqueda en caso de que no cumpla la condición\n",
+    "    return (año)\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "None\n"
-     ]
+     "data": {
+      "text/plain": [
+       "1203"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(felicitar(1))"
+    "felicitar(1123)\n"
    ]
   },
   {
@@ -225,21 +219,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "def likes(lista_nombres):\n",
-    "    if len(lista_nombres)==0:\n",
+    "    if len(lista_nombres)==0: #se usa la función len porque es una lista y necesitamos contar los elementos de dentro\n",
     "        response=\"A nadie le gusta esto\"\n",
-    "    elif len(lista_nombres)== 1:\n",
-    "        response= f\"A {lista_nombres[0]} le gusta esto\"\n",
+    "    elif len(lista_nombres)== 1: \n",
+    "        response= f\"A {lista_nombres[0]} le gusta esto\" #cero para acceder al elemento 1 de la lista\n",
     "    elif len(lista_nombres)==2:\n",
     "        response= f\"A {lista_nombres[0]} y {lista_nombres[1]} les gusta esto\"\n",
     "    elif len(lista_nombres)== 3:\n",
     "        response= f\"A {lista_nombres[0]}, {lista_nombres[1]} y {lista_nombres[2]} les gusta esto\"\n",
     "    elif len(lista_nombres)>3:\n",
-    "        response= f\"A {lista_nombres[0]}, {lista_nombres[1]} y \"+str(len(lista_nombres)-2) + \" más les gusta esto\"  \n",
+    "        response= f\"A {lista_nombres[0]}, {lista_nombres[1]} y \"+str(len(lista_nombres)-2) + \" más les gusta esto\"  #convertimos a str porque no nos dejaría sumar un int \n",
     "    return response\n",
     "\n",
     "\n",
