--- a/Python/modulo-1-ejercicio-9-funciones-argumentos.ipynb
+++ b/Python/modulo-1-ejercicio-9-funciones-argumentos.ipynb
@@ -39,10 +39,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def calculadora(puntos):\n",
+    "    lista_puntos= puntos.split(\" \")             #separamos el string por los espacios para poder tener los 3 elementos por separado\n",
+    "    if lista_puntos[1]== \"+\":                   #usamos la posición 1 que es el operador \n",
+    "        resultado= len(lista_puntos[0])+len(lista_puntos[2]) #usamos un contador para que lo podamos usar como número y así poder sumarlo\n",
+    "    elif lista_puntos[1]== \"-\":                             \n",
+    "        resultado= len(lista_puntos[0])-len(lista_puntos[2])\n",
+    "    elif lista_puntos[1]== \"*\":\n",
+    "        resultado= len(lista_puntos[0])*len(lista_puntos[2])\n",
+    "    elif lista_puntos[1]== \"//\":\n",
+    "        resultado= len(lista_puntos[0])//len(lista_puntos[2])\n",
+    "    return  \".\"*resultado                           #como convertimos el string a \"numero\", al final queremos que nos devuelva el resultado multiplicado por \".\"\n",
+    "                                                    #para poder tener el resultado en \"puntos\"\n",
+    "        \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'..'"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calculadora(\"..... - ...\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -94,22 +129,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1203"
+       "7801"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "felicitar(1123)\n"
+    "felicitar(7712)\n"
    ]
   },
   {
