actualizacion funciones argumentos

--- a/Python/modulo-1-ejercicio-9-funciones-argumentos.ipynb
+++ b/Python/modulo-1-ejercicio-9-funciones-argumentos.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
        "'..'"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,17 +210,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def primo(numero):\n",
+    "    if numero<=0:\n",
+    "        return False\n",
+    "    else:\n",
+    "        for num in range(2,numero):\n",
+    "            if numero%num==0:\n",
+    "                return False\n",
+    "        return True\n",
+    "    "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "primo(-1)"
+   ]
   },
   {
    "cell_type": "code",
