--- a/Python/modulo-1-ejercicio-9-funciones-argumentos.ipynb
+++ b/Python/modulo-1-ejercicio-9-funciones-argumentos.ipynb
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
        "7801"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,17 +169,72 @@
    "source": [
     "#Probad con los siguientes casos: \n",
     "\n",
-    "10, 10, 5 => 29\n",
+    "10, 10, 5 => 29 \n",
     "\n",
     "10, 10, 10 = > 22"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "umbral= 10\n",
+    "evap_dia= 10\n",
+    "contenido= 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dias= 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "umbral_ml=(umbral*contenido)/100    #regla de 3 para sacar el porcentaje\n",
+    "umbral_ml                           #esto sería la condicion de parada, apartir de aquí se deja de sumar días\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22\n"
+     ]
+    }
+   ],
+   "source": [
+    "while contenido>= umbral_ml:\n",
+    "    pierdo=(contenido*evap_dia)/100\n",
+    "    contenido-= pierdo\n",
+    "    dias+=1\n",
+    "print(dias)"
+   ]
   },
   {
    "cell_type": "code",
