--- a/Python/modulo-1-ejercicio-9-funciones-argumentos.ipynb
+++ b/Python/modulo-1-ejercicio-9-funciones-argumentos.ipynb
@@ -121,7 +121,7 @@
     "def felicitar(año): \n",
     "    año_str=str(año) #añadimos una variable para poder usar el año como string \n",
     "    while len(set(año_str))!= 4: #ya que es string podemos usar funciones de string como set y len\n",
-    "        año= año+1                  #pero necesitamos que sea int para poder sumar 1 \n",
+    "        año+= 1                  #pero necesitamos que sea int para poder sumar 1 \n",
     "        año_str=str(año)            #convertimos a string otra vez para que empiece de nuevo la búsqueda en caso de que no cumpla la condición\n",
     "    return (año)\n",
     "        "
