actualizacion python, pendiente ejercicio 3 de 8 funciones

--- a/Python/modulo-1-ejercicio-8-funciones.ipynb
+++ b/Python/modulo-1-ejercicio-8-funciones.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -131,13 +131,144 @@
        "[23, 64, 53, 88]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "numero_mayor()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#El objetivo de este ejercicio es convertir un string en un nuevo string en el que cada carácter \n",
+    "# del nuevo string es \"(\" si ese carácter aparece sólo una vez en el string original, o \")\" \n",
+    "# si ese carácter aparece más de una vez en el string. \n",
+    "# Nuestro código no tiene que ser case sensitive, es decir, \n",
+    "# si hay una letra en mayúscula y en minúscula cuenta como dos apariciones."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Probad la función para los siguientes strings \n",
+    "\n",
+    "\"din\"      =>  \"(((\"\n",
+    "\"recede\"   =>  \"()()()\"\n",
+    "\"Success\"  =>  \")())())\"\n",
+    "\"(( @\"     =>  \"))((\" \n",
+    "\"Ocvl@GamFLAFkixkS\" => \"((()(()()))))(()(\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def repetidas(letra):\n",
+    "    lista_letra= letra\n",
+    "    for l in letra:\n",
+    "        if l in letra :\n",
+    "            return (\"(\")\n",
+    "        \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'(((((('"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "repetidas(\"din\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def repetidas(palabra):\n",
+    "    if palabra in palabra :\n",
+    "        resultado= len(palabra)\n",
+    "        return (\"(\"*resultado)\n",
+    "    \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'((('"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "repetidas(\"din\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def repetidas(palabra):\n",
+    "    for l in palabra:\n",
+    "    \n",
+    "        resultado= len(palabra)\n",
+    "        return (\"(\"*resultado)\n",
+    "       "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'(((('"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "repetidas(\"dini\")"
    ]
   }
  ],
