--- a/Python/modulo-1-ejercicio-8-funciones.ipynb
+++ b/Python/modulo-1-ejercicio-8-funciones.ipynb
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (3824402060.py, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Input \u001b[0;32mIn [11]\u001b[0;36m\u001b[0m\n\u001b[0;31m    mensaje= letra.replace(l, \")\")\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+     ]
+    }
+   ],
+   "source": [
+    "def repetidas(letra):\n",
+    "    for l in letra:\n",
+    "            mensaje= letra.replace(l, \")\")\n",
+    "                return mensaje"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "')in'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "repetidas(\"din\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def repetidas(palabra):\n",
+    "    if palabra in palabra :\n",
+    "        resultado= len(palabra)\n",
+    "        return (\"(\"*resultado)\n",
+    "    elif palabra in palabra:\n",
+    "        mensaje= palabra.replace(palabra,\")\")\n",
+    "        return mensaje\n",
+    "    \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -194,47 +252,13 @@
        "'(((((('"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "repetidas(\"din\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def repetidas(palabra):\n",
-    "    if palabra in palabra :\n",
-    "        resultado= len(palabra)\n",
-    "        return (\"(\"*resultado)\n",
-    "    \n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'((('"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "repetidas(\"din\")"
+    "repetidas(\"recede\")"
    ]
   },
   {
@@ -269,6 +293,17 @@
    ],
    "source": [
     "repetidas(\"dini\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l = ['a','b','c']\n",
+    "if l[1] ==  º 'd'\n",
+    "print(l)"
    ]
   }
  ],
