--- a/Python/modulo-1-ejercicio-11-ficheros.ipynb
+++ b/Python/modulo-1-ejercicio-11-ficheros.ipynb
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
        " 'modulo-1-ejercicio-10-clases.ipynb']"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,22 +257,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['.DS_Store',\n",
+       " 'primera-toma-contacto',\n",
+       " 'modulo-1-ejercicio-11-ficheros.ipynb',\n",
+       " 'modulo-1-ejercicio-9-funciones-argumentos.ipynb',\n",
+       " 'modulo-1-ejercicio-8-funciones.ipynb',\n",
+       " '.ipynb_checkpoints',\n",
+       " 'modulo-1-ejercicio-10-clases.ipynb']"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "direccion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'modulo-1-ejercicio-10-clases.ipynb' in direccion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
     "def ficheros(nom_1,nom_2,nom_nuevo):\n",
-    "    if nom_nuevo in direccion== nom_1:\n",
+    "    if nom_nuevo in direccion:\n",
     "        return \"El fichero ya existe\"\n",
-    "    \n",
+    "    else:\n",
+    "        os.mkdir(nom_nuevo)\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'El fichero ya existe'"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ficheros(\"primera-toma-contacto\", \"llsjdflaa\",\"primera-toma-contacto\")"
    ]
@@ -306,7 +364,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.9 64-bit",
+   "display_name": "Python 3.9.7 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -320,12 +378,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+    "hash": "bab9de067d915f107d1ee2ee6fc66eaa4419a4d622bcbfdabd1c6ae75445c121"
    }
   }
  },
