--- a/Python/modulo-1-ejercicio-11-ficheros.ipynb
+++ b/Python/modulo-1-ejercicio-11-ficheros.ipynb
@@ -308,11 +308,15 @@
    "outputs": [],
    "source": [
     "def ficheros(nom_1,nom_2,nom_nuevo):\n",
-    "    if nom_nuevo in direccion:\n",
+    "    nom_1 = nom_nuevo\n",
+    "\n",
+    "    if nom_1 in direccion:\n",
+    "        return \"El fichero ya existe\"\n",
+    "    elif nom_2 in direccion:\n",
     "        return \"El fichero ya existe\"\n",
     "    else:\n",
     "        os.mkdir(nom_nuevo)\n",
-    "    "
+    "        return"
    ]
   },
   {
@@ -364,7 +368,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('base')",
+   "display_name": "Python 3.8.9 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -378,12 +382,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.9"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "bab9de067d915f107d1ee2ee6fc66eaa4419a4d622bcbfdabd1c6ae75445c121"
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
    }
   }
  },
