ejercicio ficheros primera funcion

--- a/Python/modulo-1-ejercicio-11-ficheros.ipynb
+++ b/Python/modulo-1-ejercicio-11-ficheros.ipynb
@@ -303,66 +303,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def ficheros(nom_1,nom_2,nom_nuevo):\n",
-    "    nom_1 = nom_nuevo\n",
+    "# Nos muestre en que carpeta estamos trabajando.\n",
+    "# Cree una carpeta que se llame \"aprendiendo-ficheros\". ⚠️ Tened en cuenta que si la carpeta ya existe no la podemos crear, nos devolverá un error. Incluye en la función un programa que evite que nos de un error si la carpeta ya existe.\n",
+    "# Cree otra carpeta que se llame \"datos\" dentro de la carpeta \"aprendiendo-ficheros\". En esta carpeta \"datos\" guardaremos el fichero \"saludo.txt\" que os habéis descargado.\n",
+    "# Cambiad el directorio de trabajo a la carpeta \"datos\". Antes de seguir chequead que estáis trabajando en la carpeta \"datos\".\n",
+    "# Cambiad el nombre de la carpeta creada en el punto 2 a \"primera-toma-contacto\"\n",
+    "import os\n",
     "\n",
-    "    if nom_1 in direccion:\n",
-    "        return \"El fichero ya existe\"\n",
-    "    elif nom_2 in direccion:\n",
-    "        return \"El fichero ya existe\"\n",
+    "def ficheros(nom_1,nom_2,nom_nuevo):\n",
+    "    direccion=os.listdir()\n",
+    "    # Nos muestre en que carpeta estamos trabajando.\n",
+    "    ubi=os.getcwd()\n",
+    "\n",
+    "    # Cree una carpeta que se llame \"aprendiendo-ficheros\". ⚠️ Tened en cuenta que si la carpeta ya existe no la podemos crear, nos devolverá un error. Incluye en la función un programa que evite que nos de un error si la carpeta ya existe.\n",
+    "    if nom_1 not in direccion:\n",
+    "        os.mkdir(nom_1)\n",
+    "        print(f\"el fichero: {nom_1} creado\")\n",
     "    else:\n",
-    "        os.mkdir(nom_nuevo)\n",
-    "        return"
+    "        print(f\"el fichero: {nom_1} ya existe\")\n",
+    "        \n",
+    "    # Cree otra carpeta que se llame \"datos\" dentro de la carpeta \"aprendiendo-ficheros\". En esta carpeta \"datos\" guardaremos el fichero \"saludo.txt\" que os habéis descargado.\n",
+    "    os.chdir(ubi+\"/\"+nom_1)\n",
+    "    direccion=os.listdir()\n",
+    "    if nom_2 not in direccion:\n",
+    "        os.mkdir(nom_2)\n",
+    "        print(f\"el fichero: {nom_2} creado\")\n",
+    "    else:\n",
+    "        print(f\"el fichero: {nom_2} ya existe\")\n",
+    "        \n",
+    "    # Cambiad el directorio de trabajo a la carpeta \"datos\". Antes de seguir chequead que estáis trabajando en la carpeta \"datos\".\n",
+    "    os.chdir(ubi+\"/\"+nom_1+\"/\"+nom_2)\n",
+    "    print(os.getcwd())\n",
+    "    # Cambiad el nombre de la carpeta creada en el punto 2 a \"primera-toma-contacto\"\n",
+    "    os.chdir(ubi)\n",
+    "    os.rename(nom_1, nom_nuevo)\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'El fichero ya existe'"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/feliciano/Documents/Adalab/ejercicios-de-adalab/DA-promo-b-modulo-1-sprint-2-Diana-Vero/Python\n",
+      "el fichero: aprendiendo-ficheros creado\n",
+      "el fichero: datos creado\n",
+      "/Users/feliciano/Documents/Adalab/ejercicios-de-adalab/DA-promo-b-modulo-1-sprint-2-Diana-Vero/Python/aprendiendo-ficheros/datos\n"
+     ]
     }
    ],
    "source": [
-    "ficheros(\"primera-toma-contacto\", \"llsjdflaa\",\"primera-toma-contacto\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['.DS_Store',\n",
-       " 'primera-toma-contacto',\n",
-       " 'modulo-1-ejercicio-11-ficheros.ipynb',\n",
-       " 'modulo-1-ejercicio-9-funciones-argumentos.ipynb',\n",
-       " 'modulo-1-ejercicio-8-funciones.ipynb',\n",
-       " '.ipynb_checkpoints',\n",
-       " 'modulo-1-ejercicio-10-clases.ipynb']"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "os.listdir()"
+    "print(os.getcwd())\n",
+    "ficheros(\"aprendiendo-ficheros\", \"datos\",\"primera-toma-contacto\")"
    ]
   }
  ],
