--- a/Python/modulo-1-ejercicio-11-ficheros.ipynb
+++ b/Python/modulo-1-ejercicio-11-ficheros.ipynb
@@ -364,6 +364,50 @@
     "print(os.getcwd())\n",
     "ficheros(\"aprendiendo-ficheros\", \"datos\",\"primera-toma-contacto\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "# La función debe recibir 4 parámetros:\n",
+    "# Nombre del fichero, incluyendo la extensión.\n",
+    "# Como queremos leer el fichero.\n",
+    "# El encoding del fichero.\n",
+    "# El contenido que queremos escribir en el fichero.\n",
+    "# Condiciones de la función:\n",
+    "from locale import getpreferredencoding\n",
+    "\n",
+    "def lect_escr(nom_fichero, lectura, encoding, contenido):\n",
+    "      direccion=os.listdir()\n",
+    "      # Si el fichero no existe, debe crearlo, insertar contenido y mostrar su contenido.\n",
+    "      if nom_fichero not in direccion:\n",
+    "            \n",
+    "            getpreferredencoding()\n",
+    "            os.mkdir(nom_fichero)\n",
+    "            print(f\"el fichero: {nom_fichero} creado\")\n",
+    "            # Para crear un fichero, podemos usar la función open() que recibe como parámetros el nombre del fichero, el modo de apertura y el encoding.\n",
+    "            f = open(direccion, encoding=\"utf-8\")\n",
+    "            lectura=f.read()\n",
+    "      else:\n",
+    "            for nom_fichero in direccion:\n",
+    "# Usar un input para preguntar al usuario si quiere sobreescribir el fichero.\n",
+    "                  print(input(\"El fichero ya existe ¿Quieres sobre escribirlo?\"))\n",
+    "                  # Para chequear si el fichero existe debéis usar los for loops y el método in para comprobar si el nombre del fichero está en la lista de ficheros.\n",
+    "      # Para chequear si un fichero existe, podemos usar la función os.listdir() que devuelve una lista con los nombres de los ficheros que hay en un directorio.\n",
+    "\n",
+    "\n",
+    "# Si el fichero existe pregunta al usuario si quiere sobreescribirlo. En caso de Si, sobreescribe el fichero, insertad contenido y leedlo. En caso de No, no hace nada.\n",
+    "# 💡 Pistas 💡\n",
+    "# Para chequear si un fichero existe, podemos usar la función os.listdir() que devuelve una lista con los nombres de los ficheros que hay en un directorio.\n",
+    "\n",
+    "\n",
+    "# Para sobreescribir el fichero, podemos usar la función open() que recibe como parámetros el nombre del fichero, el modo de apertura y el encoding.\n",
+    "# Strings que cubren más que una línea tienen que ser iniciados y cerrados con tres comillas \"\"\"."
+   ]
   }
  ],
  "metadata": {
